# fintweet-robot

./: .gitignore  README.md  jobs.py  main.py  proxy_hist_stocktwit.txt  scraping_env.yml  setup.cfg  utils.py  workers.log.1  workers.log.2  workers.log.3  workers.py
scrapers/: __init__.py  stocktwit.py  twitter.py
src/fintweet_robot/: README.md  __init__.py  jobs.py  workers.py
tests/: test_jobs.py  test_scrapers.py  test_utils.py
