[metadata]
name = fintweet-robot-cwmli
version = 0.0.1
author = cwmli
author_email = calvinl9331@gmail.com
description = Web scraping tweets from stocktwits and twitter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cwmli/fintweet-robot
project_urls =
    Bug Tracker = https://github.com/cwmli/fintweet-robot/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src